--- a/zadatak/index.html
+++ b/zadatak/index.html
@@ -7,11 +7,9 @@
          a[target="_blank"] {
            color: green;
  }
-
-        a[href^="https://www.link-group.eu/"] {
-            color:red;
+a[target="_self"] {
+           color: red;
 }
-
 h3 + p {
   color: red; 
 }
@@ -33,7 +31,9 @@ p:nth-of-type(3)::after {
     content: " NEW";
     color: yellow;    
 
- </style>
+
+
+	 </style>
     </head>
 	<body>
 	  	  <h1>Main Heading</h1>		   
@@ -63,4 +63,5 @@ p:nth-of-type(3)::after {
 	 	 </body>  
 </html>
 		
+	  
 	  
